add getPostById
