# openapi-spec.yaml
@@ -87,7 +87,28 @@ paths:
             text/plain:
               schema:
                 $ref: "#/components/schemas/PostError"
-
+  /posts/{postId}:
+    get:
+      tags:
+        - Post
+      summary: Get all posts of a category
+      operationId: getPostById
+      parameters:
+        - name: postId
+          required: true
+          in: path
+          schema:
+            type: integer
+            description: ID of the post
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Post"
+          description: All Posts in a category
   /posts/{postId}/comments:
     parameters:
       - name: postId
